--- a/templates/sysinfo_template.html
+++ b/templates/sysinfo_template.html
@@ -13,20 +13,20 @@
 </style>
 <meta name="description" content="Copyright (c) 2016-2021.The Regents of the K0USY Group. All rights reserved. Version SP2ONG 2019-2021 (v2021)" />
 </head>
-<body style="background-color: #d0d0d0;font: 10pt arial, sans-serif;">
-<center><div style="width:1250px; text-align: center; margin-top:5px;">
+<body>
+<center><div style="width:960px; text-align: center; margin-top:5px;">
 <img alt="" src="/img/logo.png" />
 </div>
-<div style="width: 1100px;">
-<p style="text-align:center;"><span style="color:#000;font-size: 18px; font-weight:bold;"><<<system_name>>></span></p>
+<div style="width: 960px;">
+    <h1><<<system_name>>></h1>
 <p></p>
 </div>
-<div style="width: 1100px;">
+<div style="width: 960px;">
 <noscript>You must enable JavaScript</noscript>
     <p id="sinfo"></p>
 </div>
-<fieldset style="background-color:#e0e0e0;display:inline-block;margin-left:20px;margin-right:20px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-<legend><b><font color="#000">&nbsp;.: System Info :.&nbsp;</font></b></legend>
+<fieldset>
+<legend>&nbsp;.: System Info :.&nbsp;</legend>
 <center>
 <!-- Temp CPU -->
 <p><img alt="" src="/img/tempC.png" /><p>
