--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,38 @@
-tr:nth-child(even).log {background-color: #fafafa;text-align: center;}
+body {
+  background-color: #10142B;
+  font-size: 12px;
+  font-family: Arial;
+}
+
+fieldset {
+    border: 1px solid #DDDDDD;
+    display: inline-block;
+    font-size: 14px;
+    width: 900px;
+    font-family: Arial, Helvetica;
+    /*padding: 1em 2em;*/
+    background-color:#415F7F;
+    margin-left:15px;
+    margin-right:15px
+    border-top-left-radius: 10px; 
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px; 
+    border-bottom-right-radius: 10px;
+}
+ 
+legend {
+    background: #337ab7;
+    color: #ffffff;
+    margin-bottom: 10px;
+    padding: 0.5em 1em;
+    font-weight: bold;
+}
+
+h1 {
+    color: #FFE87C;
+}
+
+tr:nth-child(even).log {background-color: #FFFFFF;text-align: center;}
 
 a:link {
   color: #0066ff;
@@ -108,5 +142,80 @@ a:active {
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
 
-table, td, th {border: .5px solid #d0d0d0; padding: 2px; border-collapse: collapse; text-align:center;}
+table, td, th {
+    border: .5px solid #d0d0d0; 
+    padding: 2px; 
+    border-collapse: collapse;
+    text-align:center;
+    font-size: 14px;
 
+}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-image: linear-gradient(to bottom, #3677B0 0%, #28527B 100%);
+  font-style: ;
+  color: #F2F2F2;    
+}
+
+.topnav {
+  overflow: hidden;
+}
+
+.topnav a {
+  float: right;
+  color: #ffffff;
+  text-align: center;
+  padding: 30px 10px;
+  text-decoration: underline;
+  /*text-decoration: none;*/
+  font-size: 17px;
+}
+.topnav a:first-child {
+  float: left;
+  color: #50C878;
+  text-align: center;
+  padding: 20px 10px;
+  text-decoration: none;
+  font-size: 32px;
+}
+
+.topnav a:hover {
+  color: #ffffff;
+  background-color: #555;
+}
+
+
+/*css for responsive navbar*/
+/*.topnav .icon {*/
+/*  display: none;*/
+/*}*/
+
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+/*@media screen and (max-width: 600px) {*/
+/*  .topnav a:not(:first-child) {display: none;}*/
+/*  .topnav a.icon {*/
+/*    float: right;*/
+/*    display: block;*/
+/*  }*/
+/*}*/
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/*@media screen and (max-width: 600px) {*/
+/*  .topnav.responsive {position: relative;}*/
+/*  .topnav.responsive a.icon {*/
+/*    position: absolute;*/
+/*    right: 0;*/
+/*    top: 0;*/
+/*  }*/
+/*  .topnav.responsive a {*/
+/*    float: none;*/
+/*    display: block;*/
+/*    text-align: left;*/
+/*  }*/
+/*}*/
+
+/*end of css for responsive navbar*/
