--- a/templates/bridge_table.html
+++ b/templates/bridge_table.html
@@ -1,6 +1,6 @@
 {% include 'buttons.html' ignore missing %}
-<fieldset style="background-color:#e0e0e0e0;margin-left:15px;margin-right:15px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-<legend><b><font color="#000">&nbsp;.: Bridge status :.&nbsp;</font></b></legend>
+<fieldset>
+<legend>&nbsp;.: Bridge status :.&nbsp;</legend>
  {% if _table['BRIDGES']|length == 0 and _table['SETUP']['BRIDGES'] != False %}
          <table style='width:100%; font: 13pt arial, sans-serif'>
              <tr style='border:none; background-color:#f9f9f9f9;'>
