--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>DMR Server monitor - STATUS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--disable font font-awesome for responsive navbar-->
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 <script type="text/javascript" src="scripts/hbmon.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" />
 <style>
@@ -12,33 +15,52 @@
 </style>
 <meta name="description" content="Copyright (c) 2016-2021.The Regents of the K0USY Group. All rights reserved. Version SP2ONG 2019-2021 (v20210401)" />
 </head>
-<body style="background-color: #d0d0d0;font: 10pt arial, sans-serif;">
-<center><div style="width:1250px; text-align: center; margin-top:5px;">
-<img src="/img/logo.png?random=323527528432525.24234" alt="" />
+<body>
+
+<center>
+<div style="width:960px; text-align: center; margin-top:5px;">
+<div class="topnav" id="myTopnav">
+  <a class="active" href="/">((+)) Radio Network</a>
+  <a href="https://first-aid-radio.squarespace.com/blog">Blog</a>
+  <a href="https://first-aid-radio.squarespace.com/volunteer">Get Involved</a>
+  <a href="https://first-aid-radio.squarespace.com/services">Services</a>
+  <a href="https://first-aid-radio.squarespace.com/team">Team</a>
+  <a href="https://first-aid-radio.squarespace.com/about">Our Mission</a>
+  <a href="https://first-aid-radio.squarespace.com">((+)) FirstAidRadio.com</a>
+  <a href="javascript:void(0);" class="icon" onclick="navFunc()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
-<div style="width: 1100px;">
-<p style="text-align:center;"><span style="color:#000;font-size: 18px; font-weight:bold;"><<<system_name>>></span></p>
+
+<!---<img src="/img/logo.png?random=323527528432525.24234" alt="" />--->
+</div>
+<div style="width: 960px;">
+    <h1><<<system_name>>></h1>
 <p></p>
 </div>
-<div style="width: 1100px;">
+<div style="width: 960px;">
 <noscript>You must enable JavaScript</noscript>
     <p id="main"></p>
 </div>
-<!-- LOG monitor -->
-<!--
-<div style="width: 1150px; margin-left:0px;">
-<fieldset style="width: 1100px; margin-left:0px;margin-right:0px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-	<legend><b><font color="#000">&nbsp;.: Call log window :.&nbsp;</font></b></legend>
-        <pre id="log" style="height: 20em; text-align: left; overflow-y: scroll; font-size:13px; background-color: #000000; color:#b1eee9;"></pre>
-</fieldset></div>
--->
-<div style="width: 1100px;">
-<p style="text-align: center;"><span style="text-align: center;">
+
+<div style="width: 960px;">
+<p style="text-align: center;"><span style="text-align: center; color:#ffffff">
 Copyright (c) 2016-2021<br>The Regents of the <a target="_blank" href=http://k0usy.mystrikingly.com/>K0USY Group</a>. All rights reserved.<br><a title="HBMonv2 SP2ONG v20210401" target="_blank" href=https://github.com/sp2ong/HBMonv2>Version SP2ONG 2019-2021</a><br><br></span>
     <!-- THIS COPYRIGHT NOTICE MUST BE DISPLAYED AS A CONDITION OF THE LICENCE GRANT FOR THIS SOFTWARE. ALL DERIVATEIVES WORKS MUST CARRY THIS NOTICE -->
     <!-- This is version of HBMonitor SP2ONG 2019-2021 (v20210401)-->
 </p>
 </div>
 </center>
+<!--js script for responsive navbar-->
+<!--<script>-->
+<!--function navFunc() {-->
+<!--  var x = document.getElementById("myTopnav");-->
+<!--  if (x.className === "topnav") {-->
+<!--    x.className += " responsive";-->
+<!--  } else {-->
+<!--    x.className = "topnav";-->
+<!--  }-->
+<!--}-->
+<!--</script>-->
 </body>
 </html>
