--- a/templates/lastheard.html
+++ b/templates/lastheard.html
@@ -1,5 +1,8 @@
-<br><fieldset style="border-radius: 8px; background-color:#f0f0f0f0;margin-left:15px;margin-right:15px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-<legend><b><font color="#000">&nbsp;.: Lastheard :.&nbsp;</font></b></legend>
-<table style="width:100%; font: 10pt arial, sans-serif">
-<TR style=" height: 32px;font: 10pt arial, sans-serif;background-image: linear-gradient(to bottom, #337ab7 0%, #265a88 100%);color:white;"><TH>Date</TH><TH>Time</TH><TH>Callsign (DMR-Id)</TH><TH>Name</TH><TH>TG#</TH><TH>TG Name</TH><TH>TX (s)</TH><TH>Slot</TH><TH>System</TH></TR>
+<!--<br><fieldset style="border-radius: 8px; background-color:#f0f0f0f0;margin-left:15px;margin-right:15px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">-->
+<fieldset>
+<legend>&nbsp;.: Lastheard :.&nbsp;</legend>
+<!--<legend><b><font color="#000">&nbsp;.: Lastheard :.&nbsp;</font></b></legend>-->
+<table style="width:100%; font: 10pt arial, sans-serif;background-color:#f1f1f1;">
+<TR style="height: 32px;font: 10pt arial, sans-serif;background-image: linear-gradient(to bottom, #337ab7 0%, #265a88 100%);color:white;"><TH>Date</TH><TH>Time</TH><TH>Callsign (DMR-Id)</TH><TH>Name</TH><TH>TG#</TH><TH>TG Name</TH><TH>TX (s)</TH><TH>System</TH></TR>
+<TR class="log"><TD>2022-08-10</TD><TD>08:15</TD><TD><a style="font: 9pt arial,sans-serif;font-weight:bold;color:#0066ff;" target="_blank" href=https://qrz.com/db/KG6FBM>KG6FBM</a></b><span style="font: 7pt arial,sans-serif"> (3159843)</span></TD><TD><font color=#002d62><b> Bernard S</b></font></TD><TD><font color=#b5651d><b>9999</b></font></TD><TD><font color=green><b> </b></font></TD><TD>7</TD><TD>ECHOTEST</TD></TR>
 </table></fieldset><br>
