--- a/templates/main_table.html
+++ b/templates/main_table.html
@@ -1,6 +1,8 @@
 {% include 'buttons.html' ignore missing %}
-<fieldset style="background-color:#f0f0f0f0;margin-left:15px;margin-right:15px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-<legend><b><font color="#000">&nbsp;.: DMR Server activity :.&nbsp;</font></b></legend>
+<br>
+<br>
+<fieldset>
+<legend>&nbsp;.: DMR Server activity :.&nbsp;</legend>
 {% if _table['MASTERS']|length >0 %}
  <table style="table-layout:fixed;font: 10pt arial, sans-serif;margin-top:4px;margin-bottom:4px;" width=100%>
     <tr style="height:30px;font: 10pt arial, sans-serif;{{ themec }}">
@@ -75,11 +77,15 @@
 {% endif %}
 </table>
 </fieldset>
+<br>
+<br>
 {% if _table['SETUP']['LASTHEARD'] == True %}
   {% include 'lastheard.html' ignore missing %}
 {% endif %}
-<fieldset style="background-color:#f0f0f0f0;margin-left:15px;margin-right:15px;font-size:14px;border-top-left-radius: 10px; border-top-right-radius: 10px;border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-<legend><b><font color="#000">&nbsp;.: Connected to DMR Server :.&nbsp;</font></b></legend>
+<br>
+<br>
+<fieldset>
+<legend>&nbsp;.: Connected to DMR Server :.&nbsp;</legend>
 <table style="table-layout:fixed;width:100%; font: 10pt arial, sans-serif;font-weight:600;margin-top:5px;margin-bottom:5px;" width=100%>
 {% if _table['MASTERS']|length >0 %}
 <tr style="background-color:#f9f9f9f9;"><td>
