--- a/templates/masters_template.html
+++ b/templates/masters_template.html
@@ -2,7 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>DMR Server monitor - Masters</title>
+<title>DMR Server monitor - STATUS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--disable font font-awesome for responsive navbar-->
+<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
 <script type="text/javascript" src="scripts/hbmon.js"></script>
 <link rel="stylesheet" type="text/css" href="css/styles.css" />
 <style>
@@ -10,17 +13,32 @@
 .button { <<<theme_color>>> }
 .dropbtn { <<<theme_color>>> }
 </style>
-<meta name="description" content="Copyright (c) 2016-2021.The Regents of the K0USY Group. All rights reserved. Version SP2ONG 2019-2021 (v2021)" />
+<meta name="description" content="Copyright (c) 2016-2021.The Regents of the K0USY Group. All rights reserved. Version SP2ONG 2019-2021 (v20210401)" />
 </head>
-<body style="background-color: #d0d0d0;font: 10pt arial, sans-serif;">
-<center><div style="width:1250px; text-align: center; margin-top:5px;">
-<img alt="" src="/img/logo.png" />
+<body>
+
+<center>
+<div style="width:960px; text-align: center; margin-top:5px;">
+<div class="topnav" id="myTopnav">
+  <a class="active" href="/">((+)) Radio Network</a>
+  <a href="https://first-aid-radio.squarespace.com/blog">Blog</a>
+  <a href="https://first-aid-radio.squarespace.com/volunteer">Get Involved</a>
+  <a href="https://first-aid-radio.squarespace.com/services">Services</a>
+  <a href="https://first-aid-radio.squarespace.com/team">Team</a>
+  <a href="https://first-aid-radio.squarespace.com/about">Our Mission</a>
+  <a href="https://first-aid-radio.squarespace.com">((+)) FirstAidRadio.com</a>
+  <a href="javascript:void(0);" class="icon" onclick="navFunc()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
-<div style="width: 1100px;">
-<p style="text-align:center;"><span style="color:#000;font-size: 18px; font-weight:bold;"><<<system_name>>></span></p>
-<p style="text-align:center;"></p>
+
+<!---<img src="/img/logo.png?random=323527528432525.24234" alt="" />--->
 </div>
-<div style="width: 1100px;">
+<div style="width: 960px;">
+    <h1><<<system_name>>></h1>
+<p></p>
+</div>
+<div style="width: 960px;">
 <noscript>You must enable JavaScript</noscript>
         <p id="masters"></p>
 </div>
