--- a/css/styles.css
+++ b/css/styles.css
@@ -189,12 +189,12 @@ th {
 
 
 /*css for responsive navbar*/
-/*.topnav .icon {*/
-/*  display: none;*/
-/*}*/
+.topnav .icon {
+  display: none;
+}
 
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+ /*When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 /*@media screen and (max-width: 600px) {*/
 /*  .topnav a:not(:first-child) {display: none;}*/
 /*  .topnav a.icon {*/
@@ -203,7 +203,7 @@ th {
 /*  }*/
 /*}*/
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+ /*The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 /*@media screen and (max-width: 600px) {*/
 /*  .topnav.responsive {position: relative;}*/
 /*  .topnav.responsive a.icon {*/
@@ -219,3 +219,51 @@ th {
 /*}*/
 
 /*end of css for responsive navbar*/
+
+
+
+/*begin css for dmr activity*/
+table.scroll {
+    width: 100%;
+    border-spacing: 0;
+    background-color:#f1f1f1;
+    margin-top:4px;
+    margin-bottom:4px;
+}
+
+table.scroll th,
+table.scroll td,
+table.scroll tr,
+table.scroll thead,
+table.scroll tbody { display: block; }
+
+
+table.scroll tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+table.scroll tbody {
+    height: 100px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+table.scroll tbody td,
+table.scroll thead th {
+    float: left;
+}
+
+thead tr th { 
+    height: 20px;
+    line-height: 30px;
+}
+
+
+tbody td:last-child, thead th:last-child {
+    border-right: none !important;
+}
+
+/*end of dmr activity*/
